Fixed: - grid-layout to make all cards visible - Amended the card back sizing - Added HTML parser for json objects - Began to format the text in names.json - further improvements to overlay positining

--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -1,19 +1,22 @@
 .overlay {
-  position: absolute;
+  position: relative;
   display: grid;
   width: 100%;
   height: 100%;
-  grid-template-columns: repeat(8, 250px);
+  grid-template-columns: repeat(3, 33%);
+  grid-template-rows: repeat(10, 10%);
   z-index: 1;
 }
 
 .text{
+  display: flex;
   flex-wrap: wrap;
-  flex-flow: row;
-  grid-column: 2/3;
+  flex-flow: row wrap;
+  grid-column: 2;
+  grid-row: 4;
     position: absolute;
-      width: 350px;
-      padding: 40px;
+      width: 20rem;
+      padding: 1rem;
       color: white;
       font-weight: bold;
   border: 1px solid;
@@ -29,7 +32,7 @@
 
   .column {
     display: flex;
-      flex-flow: row;
+      flex-flow:wrap column;
     width: 100%;
       align-content: space-evenly;
       justify-content: space-around;
